Avoid overflow in button

--- a/public/styles/main.styl
+++ b/public/styles/main.styl
@@ -77,8 +77,8 @@ body
           background-color darken(#d4ffaa, 10%)
 
         td button
-          width 180px
-          height 60px
+          min-width 180px
+          min-height 60px
           background transparent
           border none
           outline none
